# gtk-layer-shell-gir

./: .gitignore  .gitmodules  Cargo.toml  Gir.toml  README.md
.github/workflows/: build.yml  cross_compile.yaml
examples/: example.rs
gtk-layer-shell-sys/: Cargo.toml  Gir.toml  README.md  build.rs
gtk-layer-shell-sys/src/: lib.rs
gtk-layer-shell-sys/tests/: abi.rs  constant.c  layout.c
src/: lib.rs
src/auto/: enums.rs  functions.rs  mod.rs  versions.txt  window.rs
