[package]
name = "gtk-layer-shell"
version = "0.2.1"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
license = "MIT"
description = "Save gir-generated wrapper for gtk-layer-shell"
repository = "https://github.com/grelltrier/gtk-layer-shell-gir/tree/master/gtk-layer-shell-sys"
keywords = ["gtk", "gtk-layer-shell", "wayland", "gir", "wrapper"]
categories = ["api-bindings", "gui"]
edition = "2018"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.14"
glib-sys = "0.14"
gdk = {version = "0.14", features= ["v3_22"]}
gtk = "0.14"
gtk-layer-shell-sys = { path = "./gtk-layer-shell-sys" }

[dev-dependencies]
gio = "0.14"
