[package]
name = "gtk-layer-shell-sys"
version = "0.0.1"
links = "gtk_layer_shell"
build = "build.rs"
license = "MIT"
description = "Unsave gir-generated FFI bindings for gtk-layer-shell"
repository = "https://github.com/grelltrier/gtk-layer-shell-gir"
keywords = ["gtk", "gtk-layer-shell", "wayland", "FFI", "unsafe"]
categories = ["external-ffi-bindings", "gui"]
[package.metadata.system-deps.gtk_layer_shell_0]
name = "gtk-layer-shell-0"
version = "0.1"

[package.metadata.system-deps.gtk_layer_shell_0.feature-versions]
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gtk_layer_shell_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.10"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.10"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.10"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
